support get from server.

--- a/helloangular/src/app/dashboard/dashboard.component.html
+++ b/helloangular/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,11 @@
 <h3>Dashboard 1～5</h3>
 <div [ngClass]="'grid grid-pad'">
     <ol>
-        <li [ngClass]="'col-1-5'" *ngFor="let todo of todoList.todos; index as i" routerLink="/detail/{{i}}">
+        <li [ngClass]="'col-1-5'" *ngFor="let todo of todoList.todos; index as i">
             <div [ngClass]="'module todo'">
-                <h4>{{todo.text}}</h4>
+                <a routerLink="/detail/{{i}}">
+                    <h4>{{todo._text}}</h4>
+                </a>
             </div>
         </li>
     </ol>
