--- a/helloangular/src/app/dashboard-todo-detail/dashboard-todo-detail.component.html
+++ b/helloangular/src/app/dashboard-todo-detail/dashboard-todo-detail.component.html
@@ -11,9 +11,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>{{todo.text}}</td>
-                <td>{{todo.detail.registDate | date:"yy/MM/dd HH:mm"}}</td>
-                <td>{{todo.detail.updateDate | date:"yy/MM/dd HH:mm"}}</td>
+                <td>{{todo._text}}</td>
+                <td>{{todo._detail._registDate | date:"yy/MM/dd HH:mm"}}</td>
+                <td>{{todo._detail._updateDate | date:"yy/MM/dd HH:mm"}}</td>
             </tr>
         </tbody>
     </table>
